fix gap at top of main card in artist detail screen

--- a/apps/wyzetalk-assessment/src/app/components/artist/artist.component.scss
+++ b/apps/wyzetalk-assessment/src/app/components/artist/artist.component.scss
@@ -27,7 +27,6 @@ body {
   border-radius: 4px;
   max-width: 600px;
   max-height: 1000px;
-  margin-top: 100px;
   padding: 0;
 
   .mat-card-image {
@@ -61,13 +60,13 @@ body {
 }
 
 td {
-    background-color: #424242;
-    text-align: left;
-    padding-top: 10px;
-    padding-left: 2px;
-    padding-right: 10px;
+  background-color: #424242;
+  text-align: left;
+  padding-top: 10px;
+  padding-left: 2px;
+  padding-right: 10px;
 }
 
 table {
-    border-collapse: collapse;
+  border-collapse: collapse;
 }
